--- a/Modules/Forum/templates/default/tpl.forums_threads_view.html
+++ b/Modules/Forum/templates/default/tpl.forums_threads_view.html
@@ -9,6 +9,7 @@
 			<div class="ilFrmPostContentContainer">
 				<a name="{POST_ANKER}"></a>
 				<!-- BEGIN draft_anchor --><a name="{DRAFT_ANCHOR}"></a><!-- END draft_anchor -->
+				<!-- BEGIN metadata --><div>{META_DATA}</div><!-- END metadata -->
 				<div class="ilFrmPostHeader">
 					<span class="small"><!-- BEGIN usr_name -->{USR_NAME} | <!-- END usr_name -->{AUTHOR} <!-- BEGIN role --> ({ROLE})<!-- END role --><!-- BEGIN pseudonym --> ({PSEUDONYM})<!-- END pseudonym --> | {POST_DATE}<br /><!-- BEGIN post_update -->{POST_UPDATE_TXT}  <!-- BEGIN update_usr_name -->{UPDATE_USR_NAME} | <!-- END update_usr_name -->{UPDATE_AUTHOR}<!-- END post_update --><!-- BEGIN post_not_activated_yet --><br /><span class="ilFrmPostActivationStatus">{POST_NOT_ACTIVATED_YET}</span><!-- END post_not_activated_yet --></span>
 					<div class="ilFrmPostTitle">{SUBJECT}</div>
